--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@
       margin-left: 40px;
   }
   .rotate{
-      margin-right: 90px;
-      height: 700px;
+      margin-right: 110px;
+      height: 630px;
       animation: imgRotate 30s linear infinite;
       /* margin-bottom: 40px; */
       /* padding: 0px; */
@@ -317,6 +317,7 @@ border-radius: 23px;
     font-size: 70px;
     text-align: center;
     font-weight: 400;
+    margin-top: 20%;
 }
 .name{
     color: #FFB61D;
@@ -745,7 +746,7 @@ border-radius: 200px;
 width: 180px;
 height: 300px;
 /* left: 1152px; */
-left: 88%;
+left: 87.7%;
 right: 0px;
 top: 4413px;
 /* border-radius: 177px; */
@@ -1081,14 +1082,11 @@ color: #000000;
 
 
 
-.homians_row{
-  /* left: 200px; */
-}
 .card_1{
   margin: 10px;
   margin-top: 240px;
   box-shadow: 4px 1px 6px 5px #ecf9da;
-  width: 302px;
+  width: 270px;
   height: 245px;
 border-radius: 11px;
 margin-left: -5%;
@@ -1652,7 +1650,7 @@ color: #000000;
     
     /*############### media query ######## */
     
-    @media only screen and (max-width: 600px) {
+    /* @media only screen and (max-width: 600px) {
       .head{
  
         font-size: 48px;
@@ -1684,62 +1682,7 @@ color: #000000;
     
     
       }
-    /* .asd{
-      margin-top: 157rem;
-      margin-left: -20px;
     
-    } */
-    
-    /* .niet{
-      margin-top: 170rem;
-      margin-left: -340px !important;
-    } */
-    
-    
-    /* .nit{
-      margin-top: 170rem;
-      margin-left: -340px !important;
-    
-    } */
-    
-    /* .qwe{
-      margin-top: 157rem !important;
-      margin-left:-20px ;
-      list-style:square;
-    } */
-    
-    
-    
-    /* .mohit{
-      margin-top: 186rem;
-      margin-left: 25px;
-      font-weight: 600;
-    } */
-    
-     
-    
-      /* .nie{
-        margin-top: 183rem;
-        margin-left: -800px !important;
-      
-      } */
-      /* .question{
-        display: none;
-      } */
-    
-      /* .nivesh{
-        display: none;
-      } */
-    
-    
-      /* .ni{
-        margin-top: 183rem;
-        margin-left: -800px !important;
-    
-      } */
-      /* .qwe{
-        margin-top: 500px;
-      } */
     
       .ord{
         position: fixed;
@@ -1773,16 +1716,7 @@ color: #000000;
         font-size: 20px;
         left: -54%;
       }
-      /* .work{
-        margin-left: -22%;
-      } */
-      /* .fruit-img{
-        top: 510%;
-        width: 70%;
-        height: 500px;
-        margin-left: -85%;
-      }
-     */
+
     
     @media (max-width:600px) {
     .nav > .nav-btn {
@@ -1848,7 +1782,7 @@ color: #000000;
 
   @media only screen and (max-width: 600px) {
     .head{
-      /* margin-top: 50px; */
+
       font-size: 48px;
       top:5%;
     }
@@ -1873,7 +1807,7 @@ color: #000000;
     .about_description{
       width: 250px;
       color: rgb(83, 83, 83);
-      /* margin-right: 50px; */
+
       margin-left: -30px;
       font-size: 14px;
     }
@@ -1907,7 +1841,7 @@ color: #000000;
       margin-top: 135%;
       margin-left: -146%;
       font-size: 70px;
-      /* margin-left: -200%; */
+
     }
     .service{
       margin-top: 110%;
@@ -1986,7 +1920,7 @@ color: #000000;
     }
     .play_sign{
       top: 18%;
-      /* margin-left: 25%; */
+
       height:25px ;
       left: 30%;
     }
@@ -2014,7 +1948,7 @@ color: #000000;
       width: 15%;
       top: 761%;
       margin-left: -10%;
-      /* left: -15%; */
+
     }
     .button_of_green_box3{
       height: 4%;
@@ -2044,9 +1978,9 @@ color: #000000;
     }
    
     .fav__box{
-      /* position: absolute; */
+ 
      margin-top: 19%;
-      /* margin: 2px; */
+ 
       height: 80px;
       margin-right: 2px;
       margin-left: 8px;
@@ -2159,8 +2093,7 @@ color: #000000;
       border-radius: 50%;
       display: inline-block;
       background: #D3EDAB;
-      text-align: center;
-      /* z-index: -1; */
+
       }
       
     .rectangle11{
@@ -2179,7 +2112,7 @@ color: #000000;
       display: inline-block;
       background: #D3EDAB;
       text-align: center;
-      /* z-index: -1; */
+
       }
     .half__img1{
       display: none;
@@ -2200,7 +2133,7 @@ color: #000000;
       margin-top: 348%;
     }
     .designation__customer{
-      /* line-height: 1px; */
+
      font-size: 10px;
      margin-top: -1%!important;
      line-height: 1px;
@@ -2213,7 +2146,7 @@ color: #000000;
     .review1{
       font-size: 10px;
       margin-left: -29%;
-      /* margin-right: -45%; */
+
       width: 180px;
       margin-top: -22%;
     }
@@ -2283,7 +2216,7 @@ color: #000000;
       height: 28%;
       width: 59%;
       left: 7%;
-      /* margin-left: -33%; */
+
       
     }
     .kit{
@@ -2296,7 +2229,7 @@ color: #000000;
       height: 28%;
       width: 59%;
       left: 7%;
-      /* margin-left: -65%; */
+
     }
     .menu-bt{
       position: absolute;
@@ -2328,7 +2261,7 @@ color: #000000;
     }
   
     .grid-container{
-      /* margin-left: 15px !important; */
+ 
       display: flex;
       flex-direction: column;
     }
@@ -2386,11 +2319,7 @@ color: #000000;
   
   }
   
-  /* .mohit{
-    margin-top: 186rem;
-    margin-left: 25px;
-    font-weight: 600;
-  } */
+
   
     .footer_back{
       margin-top:1rem !important;
@@ -2443,15 +2372,508 @@ color: #000000;
     .img2{
       position: fixed;
       left: 349px;
-      /* z-index: -1; */
+
     }
   
   
     .img3{
   
       position: fixed;
-      left: 349px;
-      /* z-index: -1; */
+
     }
     
+  } */
+
+
+
+
+  /* big landscape tablets,laptops, and desktops */
+  @media (min-width: 1200px){
+
   }
+
+
+
+  /* tablet,landscape,low resolution laptops and desktop */
+  @media (max-width:990px){
+      
+  }
+
+
+
+  /*potrait tablet,e-readers kindle */
+  @media (max-width:800px){
+
+  }
+
+
+
+
+
+  /* smartphones,android phones,landscape iphone */
+  @media (max-width: 600px){
+
+  }
+
+
+
+
+
+
+  /* smartphones,potrait iphone,potrait 480x320 (android)*/
+  @media (max-width:430px){
+    .green_img{
+      display: none;
+    }
+    .big_logo{
+      height: 7%;
+      width: 30%;
+    }
+    .rotate{
+      display: none;
+    }
+    .image_about{
+      display: none;
+    }
+    .description{
+      display: none;
+    }
+    .browse{
+      display: none;
+    }
+    .work{
+      display: none;
+    }
+    .fruit-img{
+      display: none;
+    }
+    .card_parent{
+      display: none;
+    }
+    .card_parent2{
+      display: none;
+    }
+    .btn1{
+      display: none;
+    }
+    .service{
+      display: none;
+    }
+    .dash{
+      display: none;
+    }
+    .chef{
+      display: none;
+    }
+    .chef_count{
+      display: none;
+    }
+    .customer_count{
+      display: none;
+    }
+    .subscribed__{
+      display: none;
+    }
+    .rectangle10{
+      display: none;
+    }
+    .rectangle11{
+      display: none;
+    }
+    .rectangle12{
+      display: none;
+    }
+    .rectangle15{
+      display: none;
+    }
+    .food{
+      display: none;
+    }
+    .rectangle16{
+      display: none;
+    }
+    .rectangle17{
+      display: none;
+    }
+    .review__box1{
+      display: none;
+    }
+    .review__box2{
+      display: none;
+    }
+    .nav{
+      display: none;
+    }
+    .testimonials{
+      display: none;
+    }
+    .reviews
+    {
+      display: none;
+  }
+  .half__img1{
+    display: none;
+  }
+  .half__img2{
+    display: none;
+}
+.special__diet__boxes{
+  display: none;
+}
+.mohit__skipping{
+  display: none;
+}
+.heading_kit{
+  display: none;
+}
+.bg_green{
+  display: none;
+}
+.inside_green{
+  display: none;
+}
+.button_of_green_box1{
+  display: none;
+}
+.button_of_green_box2{
+  display: none;
+}
+.button_of_green_box3{
+  display: none;
+}
+  }
+
+
+
+  @media  (max-width:1200px){
+    /* ................. */
+    .customer{
+      display: none;
+    }
+    .big_logo{
+      height: 25%;
+      margin-left: 23%;
+    }
+      .green_img{
+        width: 35%;
+        left: 64.8%;
+        height: 90%;
+      }
+    .description{
+      font-size: 18px;
+      width:80%;
+    }
+    .rotate{
+      width: 174%;
+      height: 40%;
+      
+      margin-left: -110%;
+      margin-top: 10%;
+      
+    }
+    .btn1{
+      margin-left: -16%;
+    }
+
+
+/* .................. */
+.about_us{
+  font-size: 55px;
+  
+}
+    .heading_about{
+      margin-top: -60%;
+    }
+    .dash{
+      margin-top: -3.2%;
+    }
+    .about_description{
+      margin-top: -5%;
+      font-size: 20px;
+      color: gray;
+    }
+    .image_about{
+      margin-top: -115%;
+      
+    }
+
+    
+
+
+
+
+/* ...................... */
+
+
+
+    .vertical__dash{
+      top: 181%;
+      height: 15%;
+    }
+    .chef_count{
+      top:155% ;
+      left: 5%;
+      /* font-size: 65px; */
+    }
+    .chef{
+      top: 181%;
+      left: 20%;
+      font-size: 22px;
+    }
+    .vertical__dash2{
+      top: 180%;
+      left: 44%;
+      height: 15%;
+    }
+    .customer_count{
+      top:154%;
+      left: 40%;
+    }
+    .customer{
+      top: 166%;
+    font-size: 22px;
+    left: 67%;
+    top: 178%;
+    }
+
+
+
+
+
+
+
+    /* ............. */
+    .service{
+      font-size: 55px;
+      margin-top: -12%;
+    }
+    .card1{
+      align-content: center;
+      justify-content: center;
+      height: 20%;
+      width: 28%;
+    }
+    .card2{
+      height: 20%;
+      width: 28%;
+    }
+    .card3{
+      height: 20%;
+      width: 28%;
+    }
+    .abt__card__heading{
+      margin-bottom: 15%;
+    }
+    .gajar{
+      margin-left: 40%;
+    }
+    .card_parent{
+      margin-left: 0%;
+    }
+    .row2{
+      /* margin-left: -40%; */
+    }
+
+
+
+
+    /* ............... */
+    .why_homians{
+      left: 30%;
+      top: 263%;
+      font-size: 55px;
+    }
+    .card_1{
+      width: 30%;
+    }
+    .card_2{
+      width: 30%;
+    }
+    .card_3{
+      width: 30%;
+    }
+    .card_4{
+      width: 30%;
+    }
+    .abt__heading1{
+      font-size: 12px;
+    }
+    .card_parent2{
+      margin-left:6% ;
+      margin-top: -5%;
+    }
+    .gajar1{
+      margin-left: 30%;
+      height: 30%;
+      margin-top: 10%;
+    }
+
+
+
+
+
+
+
+
+
+    /* ............... */
+    .work{
+      font-size: 55px;
+      margin-left: 67%;
+      margin-top: 2%;
+    }
+    .browse{
+      margin-top: -23%;
+      margin-left: -12%;
+    }
+    .fruit-img{
+      top: 370%;
+    }
+    .rectangle10{
+      top: 380%;
+      height: 45%;
+    }
+    .rectangle11{
+      top: 415%;
+      height: 45%;
+    }
+    .rectangle12{
+      top: 445%;
+      height: 45%;
+    }
+
+
+
+
+
+
+
+    /* .............. */
+    .heading_kit{
+      top: 490%;
+      left: 21%;
+      font-size: 55px;
+    }
+    .rectangle15{
+      height: 40%;
+      width: 25%;
+      top: 520%;
+      margin-left: 6%;
+    }
+    .rectangle16{
+      height: 40%;
+      width: 25%;
+      top: 520%;
+      margin-left: 2%;
+    }
+    .rectangle17{
+      height: 40%;
+      width: 25%;
+      top: 520%;
+      margin-left: -2.3%;
+    }
+    .rect15-img{
+      height: 50%;
+      width: 45%;
+      margin-left: 28%;
+    }
+    .rect-abt{
+      font-size: 25px;
+      left: 2%;
+    }
+    .menu-bt{
+      width: 40%;
+      margin-top: 20%;
+      margin-left: 32%;
+    }
+    .testimonials{
+      top: 560%;
+      left: 36%;
+      font-size: 55px;
+    }
+    .reviews{
+      top: 575%;
+      left: 27%;
+      /* font-size: 55px; */
+    }
+    .review__box1{
+      top: 615%;
+      left: 25%;
+    }
+    .review__box2{
+      top: 605%;
+      left: 23%;
+    }
+    .half__img1{
+      top: 600%;
+      width: 22%;
+    }
+    .half__img2{
+      top: 600%;
+      width: 12%;
+      left: 87.9%;
+    }
+    .review__inside{
+      top: 610%;
+      left: 27%;
+      font-size:120px ;
+    }
+
+
+
+
+
+
+
+
+
+
+
+    /* .............. */
+    .bg_green{
+      top:680%;
+
+    }
+    .inside_green{
+      top: 694%;
+      left: 5%;
+    }
+    .video_play{
+      top: 753%;
+    }
+    .button_of_green_box1{
+      top: 770%;
+      width: 25%;
+    }
+    .button_of_green_box2{
+      top: 770%;
+      width: 25%;
+    }
+    .button_of_green_box3{
+      top: 770%;
+      width: 25%;
+    }
+
+
+
+    /* .............. */
+    .special_diet{
+      top: 790%;
+      font-size: 35px;
+    }
+    .special_diet_content{
+      top: 820%;
+      font-size: 22px;
+      color: gray;
+    }
+    .mohit__skipping{
+      top: 790%;
+      height: 90%;
+      left: 60%;
+    }
+    .special__diet__boxes{
+      top:850%;
+      /* height: 50%!important; */
+    }
+  }
+}
